# nano-modules

./: .gitignore  CLAUDE.md  README.md
native/: CMakeLists.txt  MODULES.md
native/modules/: ffgl
native/src/bridge/: bridge_api.cpp  bridge_api.h  bridge_core.cpp  bridge_core.h  bridge_core_api.cpp  bridge_core_api.h  bridge_server.cpp  bridge_server.h  composition_cache.cpp  composition_cache.h  observer_registry.cpp  observer_registry.h  param_cache.cpp  param_cache.h  state_document.cpp  state_document.h  ws_server.cpp  ws_server.h
native/src/bridge/platform/: mutex.h
native/src/canvas/: canvas_renderer.cpp  canvas_renderer.h  draw_list.h  font8x8.h  image_loader.h  image_loader.mm
native/src/gpu/: gpu_backend.h  metal_backend.mm
native/src/json/: json_doc.cpp  json_doc.h  json_doc_client.h  json_patch.cpp  json_patch.h
native/src/plugin/: Info.plist.in  bridge_loader.cpp  bridge_loader.h  looper_plugin.cpp  looper_plugin.h  repatch_plugin.cpp  repatch_plugin.h  synth.h  synth.mm
native/src/resolume/: composition.cpp  composition.h  protocol.cpp  protocol.h  ws_client.cpp  ws_client.h
native/src/wasm/: host_functions.cpp  host_functions.h  wasm_context.h  wasm_host.cpp  wasm_host.h
native/tests/: test_bridge_api.cpp  test_bridge_loader.cpp  test_canvas_host.cpp  test_composition_cache.cpp  test_draw_list.cpp  test_gpu_metal.mm  test_json_doc.cpp  test_json_patch.cpp  test_nanolooper_wasm.cpp  test_observer_registry.cpp  test_param_cache.cpp  test_protocol.cpp  test_state_document.cpp  test_state_integration.cpp  test_wasm_host.cpp  test_ws_server.cpp
native/tools/: bridge_harness.cpp  gen_wasm.cpp
native/tools/harness/: main.mm
native/wasm_modules/: wasm_build_env.sh
native/wasm_modules/bridge_core/: build.sh
native/wasm_modules/brightness_contrast/: build.sh  compute.hlsl  main.cpp
native/wasm_modules/env_lfo/: build.sh  main.cpp
native/wasm_modules/gpu_test/: build.sh  compute.hlsl  fragment.hlsl  main.c  main.cpp  vertex.hlsl
native/wasm_modules/include/: gpu.h  host.h  io.h  module_api.h  val.h
native/wasm_modules/nano_effects/: build.sh  main.cpp
native/wasm_modules/nanolooper/: build.sh  core.c  core.cpp  core.h  main.c  main.cpp
native/wasm_modules/paramlinker/: build.sh  main.c  main.cpp
native/wasm_modules/particles_emitter/: main.cpp
native/wasm_modules/particles_renderer/: main.cpp
native/wasm_modules/solid_color/: build.sh  compute.hlsl  main.cpp
native/wasm_modules/spinningtris/: build.sh  compute.glsl  compute.hlsl  fragment.hlsl  main.c  main.cpp  vertex.glsl  vertex.hlsl
native/wasm_modules/video_blend/: build.sh  compute.hlsl  main.cpp
web/: KNOWN_ISSUES.md  index.html  jest.config.js  module-test-app.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-harness/: index.html  jest-puppeteer.config.js  package-lock.json  package.json  tsconfig.json
web-harness/public/: nanolooper.wasm
web-harness/src/: fake-resolume.ts  font8x8.test.ts  gpu-host.ts  gpu-renderer.ts  main.ts  module-client.ts  style.css  wasi-shim.ts  wasm-host.test.ts  wasm-host.ts
web-harness/test/: e2e.test.ts  gpu-pipeline.test.ts
web/public/: engine-test-runner.html  gpu-test-runner.html  wasm
web/src/: app.ts  bridge-core.ts  editor-registry.ts  engine-proxy.ts  engine-types.ts  engine-worker.ts  fake-resolume-params.ts  fake-resolume.test.ts  font8x8.ts  gpu-host.ts  main.ts  mobx-lit-element.ts  module-client.ts  module-test-app.ts  schema-compat.test.ts  schema-compat.ts  shaders.wgsl  sketch-executor.test.ts  sketch-executor.ts  sketch-types.ts  stripGpuFields.test.ts  style.css  trace-capture.ts  val.test.ts  wasm-host.test.ts  wasm-host.ts
web/src/editors/: brightness-contrast-inspector.ts  paramlinker-editor.ts
web/src/state/: app-state.ts  controller.ts  history.ts  selectable.test.ts  trace-controller.ts  types.ts
web/src/utils/: pointer-drag-op.ts
web/src/views/: create-tab.ts  edit-tab.ts  organize-tab.ts  sketch-app.ts
web/src/widgets/: column-group.ts  columns-view.ts  field-editor.ts  field-layout-manager.test.ts  field-layout-manager.ts  field-placeholder.ts  field-select.ts  field-slider.ts  field-text.ts  field-toggle.ts  field-trigger.ts  generic-inspector.ts  index.ts  output-trace-card.ts  scalar-slider.ts  smart-input.ts  spark-chart.ts  texture-monitor.ts
web/test/: brightness-contrast.test.ts  e2e.test.ts  engine-rails.test.ts  engine-test-helpers.ts  engine.test.ts  gpu-pipeline.test.ts  gpu-test-helpers.ts  particles.test.ts
